--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
         <div class="container d-flex align-items-center justify-content-between">
 
             <h1 class="logo"><a href="/">Website</a></h1>
-            <!-- Uncomment below if you prefer to use an image logo -->
             <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
             <nav id="navbar" class="navbar">
@@ -54,15 +53,35 @@
                 <div class="bg"></div>
             </nav>
         </div>
-        </nav><!-- .navbar -->
+        </nav>
 
         </div>
-    </header><!-- End Header -->
+    </header>
 
-    <main id="main">
+    <main id="main" class="main">
 
     </main>
 
+    <footer id="footer">
+        <div class="container">
+            <div class="credits row flex-column-reverse flex-md-row">
+                <div class="text col-sm-12 col-md-6 order-md-12">
+                    <div class="copyright">
+                        Copyright &copy; 2022 <strong><span>Basil Reji</span></strong>. All Rights Reserved
+                    </div>
+                    <div class="copyright">
+                        Made with 🤍 by <a href="https://www.basilreji.me/">BR</a>
+                    </div>
+                </div>
+                <div class="social-links col-12 col-md-6 order-md-1">
+                    <a href="#" class="link"><i class="ico" data-feather="link"></i></a>
+                    <a href="#" class="linkedin"><i class="ico" data-feather="linkedin"></i></a>
+                    <a href="#" class="instagram"><i class="ico" data-feather="instagram"></i></a>
+                    <a href="#" class="twitter"><i class="ico" data-feather="twitter"></i></a>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
         integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk"
